# course_project

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  compile_commands.json  debug-default.sh  gdb-debug-default.sh  main_test.c  reduction.cu  reduction.h  reduction_avx.c  reduction_test.c  release-default.sh  scan.cu  scan.h  scan_test.c  sort.cu  sort.h  sort_test.c  stream_compaction.cu  stream_compaction.h  stream_compaction_test.c  target  target-db
.cache/clangd/index/: main.cu.73A99D527EFD17E9.idx  main.cu.A420FBFDC7605DC0.idx  main2.cu.C558A32C7E56359F.idx  main_test.c.A8921AE254A6B083.idx  reduction.cu.5457475C57335FE0.idx  reduction_avx.c.DE9A249041CA8D55.idx  reduction_test.c.F02F696B343957DC.idx  scan.cu.6FCC0F98AA359FEA.idx  scan.h.1587B4B3AF264BD7.idx  scan_test.c.EE0D6FAC3112036E.idx  test.c.193F8B3FBA716833.idx  test_my_lib.cpp.6DF65733276B0CD4.idx  tests.cpp.BDB55C1E45F05AB8.idx
build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  full
build-debug/tests/: CTestTestfile.cmake  cmake_install.cmake  lib_tests[1]_include.cmake  lib_tests[1]_tests.cmake
build-release/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  full
build-release/.cache/clangd/index/: gtest-assertion-result.h.59EF3EC6661E98DB.idx  gtest-death-test-internal.h.3818DAC4C9397482.idx  gtest-death-test.h.E8236D7E1F8E73F1.idx  gtest-filepath.h.F4C85F2ED3B78F59.idx  gtest-internal.h.336B0308562519D2.idx  gtest-matchers.h.C1FA75A8CF9EAAD5.idx  gtest-message.h.07C18C76FAF9D03C.idx  gtest-param-test.h.149B701B8E780302.idx  gtest-param-util.h.1A0532CF19D0331B.idx  gtest-port-arch.h.C2EDCFCA3868DA4F.idx  gtest-port.h.272FCE78D64DE865.idx  gtest-port.h.A20CCC6B01AC6607.idx  gtest-printers.h.1C6FB475CCE7CABE.idx  gtest-printers.h.A230DF2ACB6061DC.idx  gtest-string.h.40DC5CC9D5AE1511.idx  gtest-test-part.h.1A27DE17213369F0.idx  gtest-type-util.h.F60F682D91471F58.idx  gtest-typed-test.h.8756E962055A591F.idx  gtest.h.B27DD33A0F52DAC5.idx  gtest_pred_impl.h.16CC0594428002D8.idx  gtest_prod.h.C832E07FFB90B31E.idx
build-release/Testing/Temporary/: CTestCostData.txt
build-release/tests/: CTestTestfile.cmake  cmake_install.cmake  lib_tests  lib_tests[1]_include.cmake  lib_tests[1]_tests.cmake
python-interface/: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_libmultivex.py
python-interface/multivex/: __init__.py  multivex.c  multivex.pxd  multivex.pyx  reduction.h  scan.h  sort.h  stream_compaction.h
python-interface/multivex.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: CMakeLists.txt  tests.cpp
